app/assets/stylesheets/campaigns.css
/* ... */
.btn-country {
    color: grey;
    margin: 6px 5px 5px 5px;
    padding: 4px 0px 4px 5px;
    background-color: #f9f9f9;
    border: 1.5px solid #cdcdcd;
    border-radius: 3px;
    width: 95%;
    font-family: 'Raleway', sans-serif;
    font-weight: 600;
    font-size: 10pt;
}

.angle-down-age {
    padding-left: 32%;

}

.angle-down-country {
    padding-left: 26%;

}

.dropdown-color {
    background-color: #f5f5f5;
}

#performance_list a, #engagement_list a {
    color: #555;
}

.payment-div > .payment-balance {
    font-size: 15px;
    margin-left: 20%;
    display: block;
    padding: 10px 10px 0 0;
}

#transaction-tabs {
    font-size: 18px;
}

.performance-tab {
    color: #00AEEF;
    vertical-align: middle;
    padding: 5px 5px 0px 0px;
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    font-size: 14pt;
}

.engagement-tab {
    color: #00AEEF;
    vertical-align: bottom;
    padding: 5px 5px 0px 0px;
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    font-size: 14pt;
}

.panel-campaigns {
    margin-bottom: 20px;
    background-color: #fff;
    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
    border-radius: 0;
    /*-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);*/
    /*box-shadow: 0 1px 1px rgba(0,0,0,.05);*/
    padding: 20px 20px 0px 20px;
}

.status-circle {
    width: 8px;
    height: 8px;
    border-radius: 10px;
    display: inline-block;
}

.status-paid {
    background-color: #33cd31;
}

.status-pending {
    background-color: #fdc75d;
}

.status-failed {
    background-color: #ed1b26;
}


.performance_table th:nth-child(1), .performance_table td:nth-child(1), .engagement_table th:nth-child(1), .engagement_table td:nth-child(1) {
    text-align: center ;
    width: 50px;
}

.table > thead >.payment-header > th {
    vertical-align: middle;
    border-right-color: #dddddd;
}

.table > tbody > tr > td {
    border-right-color: #dddddd;
    vertical-align: middle;
}


.cmn-toggle {
    position: absolute;
    margin-left: -9999px;
    visibility: hidden;
}
.cmn-toggle + label {
    display: block;
    position: relative;
    cursor: pointer;
    outline: none;
    user-select: none;
}

input.cmn-toggle-round + label {
    padding: 2px;
    width: 52px;
    height: 26px;
    background-color: #eaeaea;
    border-radius: 24px;
}
input.cmn-toggle-round + label:before,
input.cmn-toggle-round + label:after {
    display: block;
    position: absolute;
    top: 1px;
    left: 1px;
    bottom: 1px;
    content: "";
}
input.cmn-toggle-round + label:before {
    right: 1px;
    background-color: #dedede;
    border-radius: 24px;
    transition: background 0.4s;
    content: "x";
    color: white;
    padding-left: 32px;
    padding-top: 1px;

}
input.cmn-toggle-round + label:after {
    width: 22px;
    height: 22px;
    margin: 1px 2px 1px 2px;
    background-color: #fff;
    border-radius: 100%;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
    transition: margin 0.3s;
}
input.cmn-toggle-round:checked + label:before {
    background-color: #e72b52;
    content: "o";
    font-weight: 100;
    padding-left: 7px;
    padding-top: 2px;
    color: #e5e5e5;
}

input.cmn-toggle-round:checked + label:after {
    margin-left: 26px;
}

.pepsi-img-responsive {
    display: inline-block;
    width: 30px;
    height: 30px;
    border-radius: 50%;

}

.pepsi-img-none {
    display: inline-block;
    padding-left: 35px;
}

.form-horizontal .control-label {
    width: 30%;
}

.social-account-tab-content .date-range {
    margin-left: calc(30% + 4px);
}

#post_cost {
    width: 320px;
}

@media
only screen and (max-width: 1130px) {
    .btn-export {
        font-size: 18px;
        color: white;
    }

    .btn-age {
        font-size: 18px;
    }

    .btn-country {
        font-size: 18px;
    }
}

@media
only screen and (max-width: 980px) {
    .btn-export {
        font-size: 15px;
        margin: 20px 3px 3px 5px;
        padding: 6px 25px 6px 25px;
    }
    .btn-age {
        font-size: 15px;
        margin: 10px 3px 3px 5px;
        padding: 6px 22px 6px 18px;
    }

    .btn-country {
        font-size: 15px;
        margin: 10px 3px 3px 5px;
        padding: 6px 22px 6px 8px;
    }
    .angle-down-age {
        padding-left: 40%;

    }
}

@media
only screen and (max-width: 800px) {
    .btn-export {
        font-size: 14px;
        margin: 20px 3px 3px 5px;
        padding: 6px 20px 6px 20px;
    }
   .btn-age {
        font-size: 14px;
        margin: 10px 3px 3px 4px;
        padding: 6px 22px 6px 18px;
    }

    .btn-country {
        font-size: 14px;
        margin: 10px 2px 3px 4px;
        padding: 6px 20px 6px 9px;
    }
    .angle-down-age {
        padding-left: 50%;

    }

    .angle-down-country {
        padding-left: 15%;

    }
}
/* ... */

